WardCordinator Dashboard - Dashboard, Members Management and PU Agent Management, modified

--- a/qubes/Dashboard-ward/pu-agents.html
+++ b/qubes/Dashboard-ward/pu-agents.html
@@ -299,8 +299,8 @@
         <div id="main-content" class="main-container">
 
             <!-- PAGE DESCRIPTION HEADER SECTION -->
-            <div class=" block-header py-2 mb-0 ">
-                <div class="row clearfix d-flex justify-content-between">
+            <div class=" block-header py-4 ">
+                <div class="row clearfix d-flex justify-content-between mt-3">
                     <div class="col mb-3">
                         <h1 class="text-sm-nowrap fw-bold">Polling Unit Agents Management</h1>
                         <nav aria-label="breadcrumb">
